# camera_detection_assignment

./: .gitignore  README.md
ws/bounding_box_3d_data/boxes/: boxes_0000006.csv  boxes_0000015.csv  boxes_0000016.csv  boxes_0000017.csv  boxes_0000018.csv  boxes_0000019.csv  boxes_0000020.csv  boxes_0000021.csv  boxes_0000022.csv  boxes_0000025.csv  boxes_0000026.csv  boxes_0000027.csv  boxes_0000031.csv  boxes_0000032.csv  boxes_0000035.csv  boxes_0000037.csv  boxes_0000040.csv  boxes_0000041.csv  boxes_0000042.csv  boxes_0000046.csv  boxes_0000047.csv  boxes_0000050.csv  boxes_0000052.csv  boxes_0000055.csv  boxes_0000059.csv  boxes_0000060.csv  boxes_0000062.csv  boxes_0000063.csv  boxes_0000064.csv  boxes_0000065.csv  boxes_0000067.csv  boxes_0000071.csv  boxes_0000072.csv  boxes_0000074.csv  boxes_0000075.csv  boxes_0000076.csv  boxes_0000077.csv  boxes_0000078.csv  boxes_0000079.csv  boxes_0000080.csv  (+52 more)
ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws/install/object_detection_visual/lib/object_detection_visual/: object_detection_visual
ws/install/object_detection_visual/share/object_detection_visual/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/object_detection_visual/share/object_detection_visual/models/: wheeled_robot.sdf
ws/log/: latest_build
ws/src/object_detection_visual/: CMakeLists.txt  package.xml
ws/src/object_detection_visual/include/object_detection_visual/: object_detection_visual_node.h
ws/src/object_detection_visual/launch/: object_detection_visual.launch.py
ws/src/object_detection_visual/models/: wheeled_robot.urdf  world.sdf  world_and_wheeled_robot.sdf
ws/src/object_detection_visual/rviz/: wheeled_robot.rviz
ws/src/object_detection_visual/src/: object_detection_visual_node.cpp
ws/src/object_detection_visual/test/: visual_3d_boxes.py
ws/src/wheeled_robot_tf_broadcaster/: CMakeLists.txt  package.xml
ws/src/wheeled_robot_tf_broadcaster/src/: wheeled_robot_tf_broadcaster_node.cpp
(+5 files in other folders)
